re PR target/44643 ([avr] ICE in c-typeck.c)

PR target/44643
	* config/avr/avr.c (avr_insert_attributes): Leave TREE_READONLY
	alone. Error if non-const data has attribute progmem.

From-SVN: r174281